--- a/css/style.css
+++ b/css/style.css
@@ -666,7 +666,7 @@ a {
 
 .portfolio-link:hover .portfolio-hover-text,
 .portfolio-link:focus .portfolio-hover-text {
-  transform: translatex(0);
+  transform: translateY(0);
 }
 
 .portfolio-hover-text {
