--- a/css/style.css
+++ b/css/style.css
@@ -682,8 +682,7 @@ a {
   padding: 63px 24px;
   margin: 0;
   transform: translateY(100%);
-  transition: transform 250ms ease;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-link:hover,
